--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,12 @@
     --input: 238 40% 14%;
     --ring: 238 100% 67%;
   }
+
+  .bg-grid-pattern {
+    background-size: 20px 20px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.05) 1px, transparent 1px),
+                      linear-gradient(to bottom, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
+  }
 }
 
 @layer base {
